Update cdist to run on 16 without preview